--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "virtualai",
   "version": "0.1.0",
+
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^12.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-map-gl": "5.2.8",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
